# OSINT_Investigative_Workbench

./: README.md  README_v1_BASELINE_IMPORT.md  build_binder_v2.sh
alembic/versions/: 0002_jobs_target_nullable.py
api/routes/: binder.py
backend/: docker-compose.yml  requirements.txt
backend/app/: main.py
backend/scripts/: generate_hearing_package.sh
binder/classify/: classifier.py  rules.py
binder/dedupe/: hash_index.py  hash_index.py:Zone.Identifier  near_duplicate.py
binder/index/: build_curated_indexes.py  build_master_index.py
osint-workbench-v1/: .env.example  README.md  alembic.ini  pyproject.toml
osint-workbench-v1/alembic/: env.py
osint-workbench-v1/alembic/versions/: 0001_initial.py
osint-workbench-v1/api/: main.py
osint-workbench-v1/api/core/: config.py  security.py
osint-workbench-v1/api/db/: models.py  session.py
osint-workbench-v1/api/routes/: artifacts.py  auth.py  graph.py  investigations.py  jobs.py  targets.py  timeline.py
osint-workbench-v1/api/schemas/: auth.py  investigation.py  job.py  target.py
osint-workbench-v1/frontend/: index.html  package.json
osint-workbench-v1/frontend/src/: App.jsx
osint-workbench-v1/infra/compose/: docker-compose.yml
osint-workbench-v1/infra/docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
osint-workbench-v1/scripts/: dev_seed_manual_import.sh
osint-workbench-v1/shared/: neo4j_sync.py  storage.py
osint-workbench-v1/worker/: celery_app.py  normalization.py  tasks.py
osint-workbench-v1/worker/connectors/: base.py  factory.py  ipinfo.py  manual_import.py  shodan.py
(+60 files in other folders)
